[project]
name = "ovis-u1"
description = "This repository adds ComfyUI custom nodes that wrap the Ovis-U1 multimodal model, exposing three primary workflows inside the ComfyUI editor."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["pyarrow~=18.0.0", "accelerate~=1.1.0", "pydantic~=2.8.2", "markdown2[all]", "scikit-learn~=1.2.2", "requests", "httpx", "uvicorn", "fastapi~=0.112.4", "timm~=1.0.11", "tiktoken", "transformers_stream_generator~=0.0.4", "pandas", "deepspeed~=0.15.4", "pysubs2~=1.7.2", "trl~=0.12.1", "moviepy~=1.0.3", "diffusers~=0.31.0"]

[project.urls]
Repository = "https://github.com/neverbiasu/ComfyUI-Ovis-U1"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/neverbiasu/ComfyUI-Ovis-U1/wiki"
"Bug Tracker" = "https://github.com/neverbiasu/ComfyUI-Ovis-U1/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Ovis-U1"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

